--- a/services.html
+++ b/services.html
@@ -1,1 +1,70 @@
-f
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DTECH Services</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: linear-gradient(to bottom right, #f0f4f8, #e2e8f0);
+    }
+  </style>
+</head>
+<body class="font-sans">
+
+  <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-4 shadow-lg">
+    <div class="container mx-auto flex justify-between items-center">
+      <div class="flex items-center space-x-4">
+        <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
+        <div>
+          <h1 class="text-3xl font-extrabold tracking-wide">DTECH Services</h1>
+          <p class="text-sm italic text-blue-100">Empowering the Youth Through Digital Innovation</p>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="container mx-auto p-6">
+    <h2 class="text-2xl font-semibold mb-6 text-blue-800">What We Offer</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+
+      <!-- Service 1 -->
+      <div class="bg-white border border-gray-200 shadow-lg rounded-lg p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-bold text-blue-800 mb-2">Free Website Creation</h3>
+        <p class="text-gray-600 text-sm mb-3">We build professional websites for students and startups at no cost.</p>
+        <a href="https://dtech24.co.za" target="_blank"
+           class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+           Learn More
+        </a>
+      </div>
+
+      <!-- Service 2 -->
+      <div class="bg-white border border-gray-200 shadow-lg rounded-lg p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-bold text-blue-800 mb-2">Student Marketplace</h3>
+        <p class="text-gray-600 text-sm mb-3">Buy, sell, or rent second-hand items like textbooks, gadgets, and more.</p>
+        <a href="https://www.dtech-services.co.za" target="_blank"
+           class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+           Visit Marketplace
+        </a>
+      </div>
+
+      <!-- Service 3 -->
+      <div class="bg-white border border-gray-200 shadow-lg rounded-lg p-6 hover:shadow-xl transition">
+        <h3 class="text-xl font-bold text-blue-800 mb-2">Digital Branding Help</h3>
+        <p class="text-gray-600 text-sm mb-3">Posters, logos, emails, and social media setup for student businesses.</p>
+        <a href="#contact"
+           class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+           Contact Us
+        </a>
+      </div>
+
+    </div>
+  </main>
+
+  <footer class="bg-blue-900 text-white p-4 text-center mt-10 shadow-inner">
+    <p class="text-sm">Powered by Preasx24 | DTECH 2025</p>
+  </footer>
+
+</body>
+</html>
