--- a/services.html
+++ b/services.html
@@ -5,56 +5,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>DTECH Services</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <style>
     body {
-      background: linear-gradient(to bottom right, #f0f4f8, #e2e8f0);
+      background: linear-gradient(to bottom right, #0f172a, #1e293b);
+    }
+    .glow {
+      box-shadow: 0 0 20px #3b82f6, 0 0 30px #60a5fa;
+    }
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 0 20px #3b82f6, 0 0 30px #60a5fa;
     }
   </style>
 </head>
-<body class="font-sans">
+<body class="font-sans text-white">
 
-  <header class="bg-gradient-to-r from-blue-900 to-blue-700 text-white p-4 shadow-lg">
+  <header class="bg-gradient-to-r from-black via-blue-900 to-black text-white p-6 shadow-lg">
     <div class="container mx-auto flex justify-between items-center">
       <div class="flex items-center space-x-4">
-        <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-2 border-blue-200 shadow-md">
+        <img src="icons/dtech-logo.png" alt="DTECH Logo" class="h-16 w-16 rounded-full bg-white p-1 border-4 border-blue-400 shadow-lg">
         <div>
-          <h1 class="text-3xl font-extrabold tracking-wide">DTECH Services</h1>
-          <p class="text-sm italic text-blue-100">Empowering the Youth Through Digital Innovation</p>
+          <h1 class="text-4xl font-extrabold tracking-wide text-blue-400">DTECH Services</h1>
+          <p class="text-sm italic text-blue-200">Empowering the Youth Through Digital Innovation</p>
         </div>
       </div>
     </div>
   </header>
 
-  <main class="container mx-auto p-6">
-    <h2 class="text-2xl font-semibold mb-6 text-blue-800">What We Offer</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+  <main class="container mx-auto px-6 py-10">
+    <h2 class="text-3xl font-bold mb-10 text-blue-300 text-center">Explore Our Services</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 
       <!-- Service 1 -->
-      <div class="bg-white border border-gray-200 shadow-lg rounded-lg p-6 hover:shadow-xl transition">
-        <h3 class="text-xl font-bold text-blue-800 mb-2">Free Website Creation</h3>
-        <p class="text-gray-600 text-sm mb-3">We build professional websites for students and startups at no cost.</p>
+      <div class="service-card bg-gray-900 rounded-xl p-6 transition duration-300 hover:scale-105">
+        <div class="text-blue-400 text-4xl mb-4"><i class="fas fa-laptop-code"></i></div>
+        <h3 class="text-2xl font-bold mb-2 text-white">Free Website Creation</h3>
+        <p class="text-gray-300 mb-4">We offer students & startups beautiful, fast websites at no cost, hosted under dtech24.co.za.</p>
         <a href="https://dtech24.co.za" target="_blank"
-           class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+           class="inline-block px-4 py-2 text-sm font-semibold bg-blue-600 hover:bg-blue-700 text-white rounded glow transition">
            Learn More
         </a>
       </div>
 
       <!-- Service 2 -->
-      <div class="bg-white border border-gray-200 shadow-lg rounded-lg p-6 hover:shadow-xl transition">
-        <h3 class="text-xl font-bold text-blue-800 mb-2">Student Marketplace</h3>
-        <p class="text-gray-600 text-sm mb-3">Buy, sell, or rent second-hand items like textbooks, gadgets, and more.</p>
+      <div class="service-card bg-gray-900 rounded-xl p-6 transition duration-300 hover:scale-105">
+        <div class="text-blue-400 text-4xl mb-4"><i class="fas fa-store"></i></div>
+        <h3 class="text-2xl font-bold mb-2 text-white">Student Marketplace</h3>
+        <p class="text-gray-300 mb-4">Buy, sell, or rent second-hand books, gadgets, student furniture, and more.</p>
         <a href="https://www.dtech-services.co.za" target="_blank"
-           class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
-           Visit Marketplace
+           class="inline-block px-4 py-2 text-sm font-semibold bg-blue-600 hover:bg-blue-700 text-white rounded glow transition">
+           Visit Now
         </a>
       </div>
 
       <!-- Service 3 -->
-      <div class="bg-white border border-gray-200 shadow-lg rounded-lg p-6 hover:shadow-xl transition">
-        <h3 class="text-xl font-bold text-blue-800 mb-2">Digital Branding Help</h3>
-        <p class="text-gray-600 text-sm mb-3">Posters, logos, emails, and social media setup for student businesses.</p>
+      <div class="service-card bg-gray-900 rounded-xl p-6 transition duration-300 hover:scale-105">
+        <div class="text-blue-400 text-4xl mb-4"><i class="fas fa-paint-brush"></i></div>
+        <h3 class="text-2xl font-bold mb-2 text-white">Digital Branding</h3>
+        <p class="text-gray-300 mb-4">We help you with poster design, logo creation, email setup, and social profiles — all free for students.</p>
         <a href="#contact"
-           class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+           class="inline-block px-4 py-2 text-sm font-semibold bg-blue-600 hover:bg-blue-700 text-white rounded glow transition">
            Contact Us
         </a>
       </div>
@@ -62,8 +73,8 @@
     </div>
   </main>
 
-  <footer class="bg-blue-900 text-white p-4 text-center mt-10 shadow-inner">
-    <p class="text-sm">Powered by Preasx24 | DTECH 2025</p>
+  <footer class="bg-black text-white p-4 text-center mt-10 shadow-inner">
+    <p class="text-sm text-blue-300">Powered by <strong>Preasx24</strong> | DTECH 2025</p>
   </footer>
 
 </body>
