--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     .glow {
       box-shadow: 0 0 20px #3b82f6, 0 0 30px #60a5fa;
     }
-    .app-card:hover {
+    .app-card:hover, .tool-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 0 20px #3b82f6, 0 0 30px #60a5fa;
     }
@@ -29,14 +29,10 @@
       opacity: 0;
     }
     @keyframes slideIn {
-      to {
-        transform: translateX(0);
-        opacity: 1;
-      }
+      to { transform: translateX(0); opacity: 1; }
     }
     @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
+      from { opacity: 0; } to { opacity: 1; }
     }
     .neon-border {
       border: 2px solid #3b82f6;
@@ -46,15 +42,13 @@
       animation: pulse 2s infinite;
     }
     @keyframes pulse {
-      0%, 100% { transform: scale(1); }
+      0%,100% { transform: scale(1); }
       50% { transform: scale(1.05); }
     }
   </style>
 </head>
-<body class="font-sans text-white fade-in"><a href="https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365" target="_blank"
-class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition z-50"> Support </a>
-
-  <header class="bg-gradient-to-r from-black via-blue-900 to-black text-white p-6 shadow-lg slide-in">
+<body class="font-sans text-white fade-in">
+  <a href="#" class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition z-50">Support</a>  <header class="bg-gradient-to-r from-black via-blue-900 to-black text-white p-6 shadow-lg slide-in">
     <div class="container mx-auto flex items-center space-x-4">
       <img src="logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-4 border-blue-400 shadow-lg pulse">
       <div>
@@ -63,31 +57,91 @@ class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-
       </div>
     </div>
   </header>  <main class="container mx-auto p-6">
+    <!-- Categories -->
     <section class="mb-6 slide-in">
       <h2 class="text-2xl font-bold mb-4 text-blue-300">Categories</h2>
       <div class="grid grid-cols-2 md:grid-cols-6 gap-4">
-        <a href="dtech-apps.html" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white neon-border">D-TECH Apps</a>
-        <a href="GAMES.html" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white neon-border">GAMES</a>
-        <a href="GENERAL.html" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white neon-border">GENERAL</a>
-        <a href="DESIGN.html" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white neon-border">DESIGN</a>
-        <a href="tech.html" class="category-button bg-gradient-to-r from-blue-600 to-red-500 text-white shadow-lg rounded-lg p-4 hover:from-pink-600 hover:to-purple-600 font-semibold text-center transition block border-2 border-white neon-border">TECH</a>
-        <a href="services.html" class="category-button bg-white text-blue-800 shadow-lg rounded-lg p-4 hover:bg-blue-100 border border-blue-200 font-medium text-center transition block pulse">SERVICE</a>
+        <a href="#tools" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 font-semibold text-center transition block border-2 border-white neon-border">Termux Tools</a>
+        <a href="#apps" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 font-semibold text-center transition block border-2 border-white neon-border">Apps</a>
       </div>
-    </section><section class="slide-in">
+    </section><!-- Termux Tools -->
+<section id="tools" class="mb-12 slide-in">
+  <h2 class="text-2xl font-bold mb-6 text-blue-300">Featured Termux Tools</h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <!-- IP-Tracer Tool Card -->
+    <div class="tool-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
+      <div class="mb-4">
+        <h3 class="text-lg font-bold text-white">IP-Tracer</h3>
+        <p class="text-sm text-gray-300 mb-3">IP-Tracer lets you geolocate IP addresses directly from Termux, showing country, region, and ISP details.</p>
+      </div>
+      <div class="mb-3">
+        <code class="block bg-gray-800 p-3 rounded">git clone https://github.com/rajkumardusad/IP-Tracer</code>
+        <button onclick="copyText('git clone https://github.com/rajkumardusad/IP-Tracer')" class="mt-2 bg-blue-600 px-4 py-2 rounded glow">Copy</button>
+      </div>
+      <div class="mb-3">
+        <code class="block bg-gray-800 p-3 rounded">cd IP-Tracer &amp;&amp; bash install</code>
+        <button onclick="copyText('cd IP-Tracer && bash install')" class="mt-2 bg-blue-600 px-4 py-2 rounded glow">Copy</button>
+      </div>
+      <button onclick="window.open('https://youtu.be/example1','_blank')" class="mt-4 bg-blue-500 px-4 py-2 rounded-md transition">📺 Watch Tutorial</button>
+    </div>
+
+    <!-- Nmap Tool Card -->
+    <div class="tool-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
+      <div class="mb-4">
+        <h3 class="text-lg font-bold text-white">Nmap</h3>
+        <p class="text-sm text-gray-300 mb-3">Nmap is a powerful network scanner that discovers hosts, services, and vulnerabilities on your network.</p>
+      </div>
+      <div class="mb-3">
+        <code class="block bg-gray-800 p-3 rounded">pkg install nmap</code>
+        <button onclick="copyText('pkg install nmap')" class="mt-2 bg-blue-600 px-4 py-2 rounded glow">Copy</button>
+      </div>
+      <button onclick="window.open('https://youtu.be/example2','_blank')" class="mt-4 bg-blue-500 px-4 py-2 rounded-md transition">📺 Watch Tutorial</button>
+    </div>
+  </div>
+</section>
+
+<!-- Apps Section -->
+<section id="apps" class="slide-in">
   <h2 class="text-2xl font-bold mb-6 text-blue-300">Featured Apps</h2>
   <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-    <div class="app-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 hover:scale-105 slide-in">
-      <img src="icon.png" alt="App Icon" class="w-full h-32 object-contain p-4 bg-blue-950 border-b border-blue-700">
-      <div class="p-4">
+    <!-- DTECH Calculator App Card -->
+    <div class="app-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
+      <div class="mb-4">
+        <img src="icon.png" alt="App Icon" class="w-16 h-16 object-contain mb-2">
         <h3 class="text-lg font-bold text-white">DTECH Calculator</h3>
-        <p class="text-sm text-gray-300 mb-3">Helps students calculate APS scores and find qualifying courses.</p>
-        <a href="apps/dtech-calculator.apk" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow transition">Download APK</a>
       </div>
+      <p class="text-sm text-gray-300 mb-4">Helps students calculate APS scores and find qualifying courses.</p>
+      <a href="apps/dtech-calculator.apk" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow transition">Download APK</a>
+    </div>
+
+    <!-- Info App Card -->
+    <div class="app-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
+      <div class="mb-4">
+        <i class="fas fa-info-circle fa-3x text-blue-400 mb-2"></i>
+        <h3 class="text-lg font-bold text-white">DTECH Info App</h3>
+      </div>
+      <p class="text-sm text-gray-300 mb-4">Access tutorials, commands, and resources all in one place.</p>
+      <a href="https://example.com/dtech-info.apk" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow transition" download>Download APK</a>
+    </div>
+
+    <!-- Tools Hub App Card -->
+    <div class="app-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
+      <div class="mb-4">
+        <i class="fas fa-tools fa-3x text-blue-400 mb-2"></i>
+        <h3 class="text-lg font-bold text-white">DTECH Tools Hub</h3>
+      </div>
+      <p class="text-sm text-gray-300 mb-4">Manage and run multiple Termux tools from a simple interface.</p>
+      <a href="https://example.com/dtech-tools.apk" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow transition" download>Download APK</a>
     </div>
   </div>
 </section>
 
   </main>  <footer class="bg-black text-white p-4 text-center mt-10 shadow-inner slide-in">
     <p class="text-sm text-blue-300">Powered by <strong>Preasx24</strong> | DTECH 2025</p>
-  </footer></body>
+  </footer>  <script>
+    function copyText(text) {
+      navigator.clipboard.writeText(text);
+      alert('Copied to clipboard!');
+    }
+  </script></body>
 </html>
