--- a/index.html
+++ b/index.html
@@ -68,22 +68,40 @@
 <section id="tools" class="mb-12 slide-in">
   <h2 class="text-2xl font-bold mb-6 text-blue-300">Featured Termux Tools</h2>
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <!-- IP-Tracer Tool Card -->
-    <div class="tool-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
-      <div class="mb-4">
-        <h3 class="text-lg font-bold text-white">IP-Tracer</h3>
-        <p class="text-sm text-gray-300 mb-3">IP-Tracer lets you geolocate IP addresses directly from Termux, showing country, region, and ISP details.</p>
-      </div>
-      <div class="mb-3">
-        <code class="block bg-gray-800 p-3 rounded">git clone https://github.com/rajkumardusad/IP-Tracer</code>
-        <button onclick="copyText('git clone https://github.com/rajkumardusad/IP-Tracer')" class="mt-2 bg-blue-600 px-4 py-2 rounded glow">Copy</button>
-      </div>
-      <div class="mb-3">
-        <code class="block bg-gray-800 p-3 rounded">cd IP-Tracer &amp;&amp; bash install</code>
-        <button onclick="copyText('cd IP-Tracer && bash install')" class="mt-2 bg-blue-600 px-4 py-2 rounded glow">Copy</button>
-      </div>
-      <button onclick="window.open('https://youtu.be/example1','_blank')" class="mt-4 bg-blue-500 px-4 py-2 rounded-md transition">📺 Watch Tutorial</button>
-    </div>
+  <!-- Termux Initial Setup Card -->
+<div class="tool-card bg-gray-900 border border-green-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
+  <div class="mb-4">
+    <h3 class="text-lg font-bold text-white">Termux Initial Setup</h3>
+    <p class="text-sm text-gray-300 mb-3">
+      Run these commands in Termux to update your package lists, upgrade installed packages, and install common tools like Python, curl, git, and pip.
+    </p>
+  </div>
+  <!-- Update & Upgrade -->
+  <div class="mb-3">
+    <code class="block bg-gray-800 p-3 rounded">pkg update && pkg upgrade -y</code>
+    <button onclick="copyText('pkg update && pkg upgrade -y')" class="mt-2 bg-green-600 px-4 py-2 rounded glow">Copy</button>
+  </div>
+  <!-- Install Core Packages -->
+  <div class="mb-3">
+    <code class="block bg-gray-800 p-3 rounded">
+pkg install python git curl wget -y
+    </code>
+    <button onclick="copyText('pkg install python git curl wget -y')" class="mt-2 bg-green-600 px-4 py-2 rounded glow">Copy</button>
+  </div>
+  <!-- Upgrade pip -->
+  <div class="mb-3">
+    <code class="block bg-gray-800 p-3 rounded">pip install --upgrade pip</code>
+    <button onclick="copyText('pip install --upgrade pip')" class="mt-2 bg-green-600 px-4 py-2 rounded glow">Copy</button>
+  </div>
+  <!-- (Optional) Install Additional Utilities -->
+  <div class="mb-3">
+    <code class="block bg-gray-800 p-3 rounded">pkg install nano vim openssh -y</code>
+    <button onclick="copyText('pkg install nano vim openssh -y')" class="mt-2 bg-green-600 px-4 py-2 rounded glow">Copy</button>
+  </div>
+  <button onclick="window.open('https://youtu.be/XXXXXXXXXXX','_blank')" class="mt-4 bg-green-500 px-4 py-2 rounded-md transition">
+    📺 Watch Termux Setup Tutorial
+  </button>
+</div>
 
     <!-- Nmap Tool Card -->
     <div class="tool-card bg-gray-900 border border-blue-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
