--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 <body class="font-sans text-white fade-in">
-  <a href="#" class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition z-50">Support</a>  <header class="bg-gradient-to-r from-black via-blue-900 to-black text-white p-6 shadow-lg slide-in">
+  <a href="https://cafewarriors.com/xgx5e59sns?key=9a41d7d35ab0c4b6999ee11f4d487f7a" class="fixed top-0 right-0 m-2 text-sm bg-white text-blue-900 px-3 py-1 rounded-full shadow hover:bg-blue-100 transition z-50">Support</a>  <header class="bg-gradient-to-r from-black via-blue-900 to-black text-white p-6 shadow-lg slide-in">
     <div class="container mx-auto flex items-center space-x-4">
       <img src="logo.png" alt="DTECH Logo" class="h-14 w-14 rounded-full bg-white p-1 border-4 border-blue-400 shadow-lg pulse">
       <div>
