--- a/tools.html
+++ b/tools.html
@@ -21,20 +21,13 @@
     </div>
   </header>  <main class="container mx-auto p-6">
     <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
-      <!-- DTech URL Video Downloader Tool Card -->
-<div class="tool-card bg-gray-900 border border-purple-700 shadow-lg rounded-xl overflow-hidden transition duration-300 p-6 neon-border">
-  <div class="mb-4">
-    <h3 class="text-lg font-bold text-white">DTech URL Video Downloader</h3>
-    <p class="text-sm text-gray-300 mb-3">
-      Download videos from any website—TikTok, YouTube, Facebook, Instagram, and more—using just the video URL.
-    </p>
-  </div>
-  <!-- DTech URL Video Downloader -->
+      <!-- DTech URL Video Downloader -->
 <div class="tool-card bg-gray-900 border border-purple-700 rounded-xl p-6 neon-border">
   <h2 class="text-xl font-bold mb-2 text-white">DTech URL Video Downloader</h2>
   <p class="text-sm text-gray-300 mb-4">
     Download videos from TikTok, YouTube, Facebook, Instagram, and more—just paste the video URL.
   </p>
+
   <code class="block bg-gray-800 p-3 rounded mb-2">
     curl -o load.py https://raw.githubusercontent.com/x24em/Dtech/e9105ff06335482fa1f52711128d685b40c22b0d/load.py
   </code>
@@ -45,8 +38,8 @@
   </code>
   <button onclick="copy('python load.py')" class="bg-purple-600 px-4 py-2 rounded glow">Copy</button>
 
-  <button onclick="window.open('https://github.com/x24em/Dtech','_blank')" class="ml-2 bg-purple-500 px-4 py-2 rounded">
-    Source on GitHub
+  <button onclick="window.open('https://github.com/preasx24x/BUILD-APK/blob/main/InShot_20250612_065002364.mp4?raw=true','_blank')" class="ml-2 bg-purple-500 px-4 py-2 rounded">
+    ▶️ Play Tutorial
   </button>
 </div>
       <!-- Metasploit -->
