--- a/tools.html
+++ b/tools.html
@@ -21,7 +21,7 @@
     </div>
   </header>  <main class="container mx-auto p-6">
     <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
-      <!-- DTech URL Video Downloader with Sandboxed Inline Ad -->
+      <!-- DTech URL Video Downloader with Inline Ad & Centered Video -->
 <div class="tool-card bg-gray-900 border border-purple-700 rounded-xl p-6 neon-border">
   <h2 class="text-xl font-bold mb-2 text-white">DTech URL Video Downloader</h2>
   <p class="text-sm text-gray-300 mb-4">
@@ -45,26 +45,25 @@
 
 <!-- Full-screen Modal -->
 <div id="video-modal" class="fixed inset-0 bg-black bg-opacity-90 flex items-center justify-center hidden z-50 p-4">
-  <div class="relative w-full h-full max-w-3xl max-h-full">
+  <div class="relative w-full max-w-3xl max-h-full">
     <!-- Close -->
-    <button id="close-modal-btn" class="absolute top-4 right-4 text-white text-3xl focus:outline-none">&times;</button>
+    <button id="close-modal-btn" class="absolute top-4 right-4 text-white text-3xl focus:outline-none z-10">&times;</button>
 
-    <!-- Sandboxed Ad Iframe -->
-    <div id="ad-container" class="absolute inset-0 bg-white flex flex-col items-center justify-center p-4">
-      <iframe 
-        id="ad-iframe"
-        src="//cafewarriors.com/06/70/0a/06700ae74ed6d9035f7f071031360cf5.js" 
-        sandbox="allow-scripts" 
-        class="w-full h-3/4 border-none mb-4"
-      ></iframe>
+    <!-- Ad Overlay -->
+    <div id="ad-overlay" class="absolute inset-0 bg-white flex flex-col items-center justify-center p-6 z-20">
+      <div id="ad-content" class="mb-4">
+        <!-- ad script will be injected here -->
+      </div>
       <p class="text-gray-800">Continuing in <span id="ad-timer" class="font-bold">5</span>…</p>
     </div>
 
-    <!-- Video (hidden until after ad) -->
-    <video id="tut-video" controls class="absolute inset-0 w-full h-full object-contain hidden rounded-lg shadow-lg bg-black">
-      <source src="https://github.com/preasx24x/BUILD-APK/raw/main/InShot_20250612_065002364.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <!-- Video Container -->
+    <div id="video-container" class="absolute inset-0 flex items-center justify-center hidden">
+      <video id="tut-video" controls class="max-w-full max-h-full rounded-lg shadow-lg">
+        <source src="https://github.com/preasx24x/BUILD-APK/raw/main/InShot_20250612_065002364.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </div>
   </div>
 </div>
 
@@ -72,29 +71,40 @@
   const playBtn   = document.getElementById('play-tut-btn');
   const modal     = document.getElementById('video-modal');
   const closeBtn  = document.getElementById('close-modal-btn');
-  const adCont    = document.getElementById('ad-container');
+  const adOverlay = document.getElementById('ad-overlay');
+  const adContent = document.getElementById('ad-content');
   const adTimerEl = document.getElementById('ad-timer');
+  const videoCont = document.getElementById('video-container');
   const videoEl   = document.getElementById('tut-video');
   let countdown;
 
   playBtn.addEventListener('click', () => {
+    // show modal & ad
     modal.classList.remove('hidden');
-    adCont.classList.remove('hidden');
-    videoEl.classList.add('hidden');
+    adOverlay.classList.remove('hidden');
+    videoCont.classList.add('hidden');
 
+    // inject ad script
+    adContent.innerHTML = '';
+    const script = document.createElement('script');
+    script.type = 'text/javascript';
+    script.src = '//cafewarriors.com/06/70/0a/06700ae74ed6d9035f7f071031360cf5.js';
+    adContent.appendChild(script);
+
+    // start countdown
     let t = 5;
     adTimerEl.textContent = t;
     countdown = setInterval(() => {
-      t -= 1;
+      t--;
       if (t > 0) {
         adTimerEl.textContent = t;
       } else {
         clearInterval(countdown);
-        // swap to video
-        adCont.classList.add('hidden');
-        videoEl.classList.remove('hidden');
+        // hide ad, show video
+        adOverlay.classList.add('hidden');
+        videoCont.classList.remove('hidden');
         videoEl.currentTime = 0;
-        videoEl.play().catch(()=>{});
+        videoEl.play().catch(() => {});
       }
     }, 1000);
   });
